--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -262,7 +262,7 @@
                   </div>
 
                   <!-- you can use https://formspree.io/ -->
-                  <form action="" method="post">
+                  <form action="https://formspree.io/f/xnqwoogz" method="post">
                     <div class="row g-5">
                       <div class="col-12">
                         <label
@@ -271,10 +271,10 @@
                           >My Name is*</label
                         >
                         <input
-                          type="email"
+                          type="name"
                           class="form-control h3"
                           id="contact_name"
-                          placeholder="Mathew"
+                          placeholder="Matthew"
                           required
                         />
                       </div>
@@ -313,7 +313,7 @@
                     </div>
                   </form>
 
-                  <div class="section pb-0">
+                  <!-- <div class="section pb-0">
                     <div class="section-title mb-5">
                       <h2 class="title">What next?</h2>
                     </div>
@@ -326,7 +326,7 @@
                       3. I’ll arrange a free consultation to discuss your needs
                       and how I can help.
                     </p>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
