--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -443,8 +443,7 @@
                             <div>
                               <h3 class="mb-1">Bantaba's Platform</h3>
                               <p class="mb-0">
-                                I tackled the difficult question of "How do we
-                                improve the UX of the platform?"
+                                "How do we improve the UX of the platform?"
                               </p>
                             </div>
                             <div class="icon ms-4">
@@ -906,13 +905,13 @@
                           >About</a
                         >
                       </li>
-                      <li class="list-inline-item">
+                      <!-- <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
                           href="about.html"
                           >Read more about me</a
                         >
-                      </li>
+                      </li> -->
                       <li class="list-inline-item">
                         <a
                           class="text-hover-underline-initial"
