--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -281,8 +281,7 @@
                           <div>
                             <h3 class="mb-1">Bantaba's Platform</h3>
                             <p class="mb-0">
-                              I tackled on the difficult question of "How do we
-                              improve the UX of the platform?"
+                              "How do we improve the UX of the platform?"
                             </p>
                           </div>
                           <div class="icon ms-4">
