--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -227,14 +227,13 @@
                       by adding a points system to encourage more to use public
                       transport.
                     </p>
-                    <p>
-                        <h5><strong>TARGET GROUP</strong></h5>
-                        
-                        Our target group was quite broad - simply anyone who uses
-                        SL - and a challenge was therefore how to understand each
-                        user's needs.
-                    </p>
 
+                    <h5><strong>TARGET GROUP</strong></h5>
+                    <p>
+                      Our target group was quite broad - simply anyone who uses
+                      SL - and a challenge was therefore how to understand each
+                      user's needs.
+                    </p>
                     <p>
                       We solved this by creating three types of user behavior to
                       focus on. We came up with these three by making and
@@ -245,95 +244,168 @@
                     </p>
 
                     <h5><strong>THREE TYPES OF USERS</strong></h5>
-                    <h6><ins>The everyday commuter</ins></h6>
-                    <p>
-                      <em
-                        >"I just want to get to work for as cheap as
-                        possible"</em
-                      >
-                    </p>
-                    <p>
-                       <strong>Characteristics:</strong>
+                    <div class="flexrow">
+                      <div class="p-5" style="background-color: #9dd1ef">
+                        <h6><ins>The everyday commuter</ins></h6>
+                        <p>
+                          <em
+                            >"I just want to get to work for as cheap as
+                            possible"</em
+                          >
+                        </p>
+                        <!-- <p> -->
+                        <strong>Characteristics:</strong>
 
-                       <ul>
-                        <li>Travels to school/work</li>
-                       </ul>
-
-                       <strong>Motivations</strong>
-                       <ul>
-                            <li>
-                            Wants to get to work / school efficiently and for cheap.
-                            </li>
-                            <li>
-                                Wants to arrive on time. Only travels with SL because
-                                they don't have a car, not due for the environment.
-                            </li>
+                        <ul>
+                          <li>Travels to school/work</li>
+                          <li>
+                            Uses public transport only because they don't have a
+                            car/better alternative
+                          </li>
                         </ul>
-                    </p>
-                    
+
+                        <strong>Motivations</strong>
+                        <ul>
+                          <li>
+                            Wants to get to work / school efficiently and for
+                            cheap.
+                          </li>
+                          <li>Wants to arrive on time.</li>
+                        </ul>
+
+                        <strong>Challenges</strong>
+                        <ul>
+                          <li>
+                            Make the person think about sustainability and
+                            choose SL over taxis, even on weekends.
+                          </li>
+                        </ul>
+                        <!-- </p> -->
+                      </div>
+                      <div class="p-5" style="background-color: #9dd1ef">
+                        <h6><ins>The leisure rider </ins></h6>
+                        <p>
+                          <em
+                            >“If there's noisy people, I go for comfort and take
+                            an uber home."</em
+                          >
+                        </p>
+                        <!-- <p> -->
+                        <strong>Characteristics:</strong>
+
+                        <ul>
+                          <li>
+                            Travels home by taxi/uber after parties/dinners
+                          </li>
+                        </ul>
+
+                        <strong>Motivations</strong>
+                        <ul>
+                          <li>
+                            Wants to get home quickly and comfortably. Does not
+                            care about sustainability after drinking
+                          </li>
+                        </ul>
+
+                        <strong>Challenges</strong>
+                        <ul>
+                          <li>
+                            Get the person to use night transport instead of
+                            uber/taxi, and...
+                          </li>
+                          <li>Public transport to events</li>
+                        </ul>
+                        <!-- </p> -->
+                      </div>
+                      <div class="p-5" style="background-color: #9dd1ef">
+                        <h6><ins>Environmentally conscious</ins></h6>
+                        <p>
+                          <em>"It's an easy and sustainable pick."</em>
+                        </p>
+                        <!-- <p> -->
+                        <strong>Characteristics:</strong>
+
+                        <ul>
+                          <li>Always travels with public transportation</li>
+                        </ul>
+
+                        <strong>Motivations</strong>
+                        <ul>
+                          <li>
+                            Wants to protect the environment while still being
+                            able to get around
+                          </li>
+                        </ul>
+
+                        <strong>Challenges</strong>
+                        <ul>
+                          <li>Get them to care about the new point system.</li>
+                        </ul>
+                        <!-- </p> -->
+                      </div>
+                    </div>
+
                     <br />
                     <h5><strong>FINDING THE SOLUTION</strong></h5>
 
-                    <p>
-                      Together with the content strategist and CEO, we
-                      brainstormed on the potential content we could include on
-                      the new landing page, keeping in mind what I had gathered
-                      from analysing the user feedback. We prioritised making it
-                      clear for the user what Bantaba is.
-                    </p>
-
-                    <div class="flexrow">
+                    <div class="flexrow" style="align-items: center">
+                      <p>
+                        When we thought about the app's new look, we
+                        individually made a couple of sketches. We selected our
+                        favourite sketches and redid them slightly for the app
+                        to get a uniform design.
+                      </p>
                       <div class="col-lg-6" style="padding: 20px">
                         <img
-                          class="w-100 rounded mb-0"
+                          class="w-100 rounded p-1"
                           loading="lazy"
-                          src="assets/images/projects/Tree.svg"
-                          alt="A big tree is in the center. People are gathered in a circle around it, talking."
+                          src="assets/images/projects/SLsketches.png"
+                          alt="Three different sketches of three pages: My SL, SL loves sustainability, and a Coffee cup you can claim."
                         />
                       </div>
-                      <p>
-                        I hadn’t been aware Bantaba was an ancient word meaning
-                        <mark>‘meeting underneath a tree’</mark> and refers to a
-                        traditional tree-sanctuary where the elders of an
-                        African village gather to make important decisions.
-                        Including this would be a concrete way of telling the
-                        user that we’re here to help them meet - under the tree
-                        of Bantaba - to support each other and grow.<br /><br />
-
-                        For this, I ended up putting together an illustration.
-                      </p>
                     </div>
-                    <br />
-                    <h5><strong>Wireframing</strong></h5>
+                    <h5><strong>THE SOLUTION</strong></h5>
                     <p>
-                      Once we were satisfied and knew what we wanted to include,
-                      I made a wireframe while the content strategist wrote all
-                      of the content. I used the websites I had looked at before
-                      as inspiration when I puzzled together boxes that’d
-                      represent the future content.
+                      Our hypothesis is that with the help of our new function
+                      "My SL" we will make people become more aware of their
+                      footprints on the environment at the same time as are
+                      rewarded for travelling sustainably. This would encourage
+                      more people to use SL, and use SL *more*.
+                      <br /><br />
+                      With the help of our version of the SL app, you can travel
+                      in an environmentally friendly and sustainable way, and at
+                      the same time collect points which give you rewards.
+                    </p>
+
+                    <br />
+                    <h5><strong>First prototype</strong></h5>
+                    <p>
+                      It was the first time we used Figma (besides some testing)
+                      and we were all a little insecure but very willing to do
+                      our best. This led to some inconveniences, for example,
+                      the buttons on some pages were slightly transparent,
+                      something that worsened the readability.
                     </p>
                     <br />
-                    <!-- <div class="row mt-5 mb-0">                                       -->
-                    <!-- <div class="col-lg-4"> -->
-                    <!-- <img class="w-75 rounded mb-8 mx-auto d-block" loading="lazy" src="assets/images/projects/LandingPageDefault.svg">                                          -->
-                    <!-- </div>            -->
-                    <!-- <div class="col-lg-4">
-                                            <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg"> 
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <img class="w-100 rounded mb-8" loading="lazy" src="assets/images/projects/01.jpg"> 
-                                        </div> -->
-                    <!-- </div>  -->
-
-                    <h5><strong>MORE STUFF HERE</strong></h5>
-                    <p>moreeee</p>
-                    <br />
-
                     <img
-                      class="w-75 rounded mb-8 mx-auto d-block"
+                      class="w-100 rounded mb-8 mx-auto d-block"
                       loading="lazy"
-                      src="assets/images/projects/LandingPageDefault.svg"
+                      src="assets/images/projects/SL_previousPrototype.svg"
                     />
+                    <div class="flexrow" style="align-items: center">
+                      <p>
+                        We also changed SL's main colour to a more muted colour
+                        that is easier to look at.
+                      </p>
+                      <div class="col-lg-6" style="padding: 20px">
+                        <img
+                          class="w-100 rounded p-2"
+                          loading="lazy"
+                          src="assets/images/projects/SlTransition.svg"
+                          alt="Original SL icon vs our version, with more muted colours."
+                        />
+                      </div>
+                    </div>
 
                     <br />
                     <h5><strong>Difficulties</strong></h5>
@@ -361,9 +433,9 @@
                     <h5><strong>... and the result?</strong></h5>
                     <p>
                       Check it out live at
-                      <a href="ourbantaba.com">Bantaba's website!</a>
+                      <a href="ourbantaba.com">Bantaba's website!</a><br />
                     </p>
-                    <br />
+
                     <img
                       class="w-100 rounded mb-8"
                       loading="lazy"
