SL & About me improved

--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -245,7 +245,7 @@
 
                     <h5><strong>THREE TYPES OF USERS</strong></h5>
                     <div class="flexrow">
-                      <div class="p-5" style="background-color: #9dd1ef">
+                      <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>The everyday commuter</ins></h6>
                         <p>
                           <em
@@ -282,7 +282,7 @@
                         </ul>
                         <!-- </p> -->
                       </div>
-                      <div class="p-5" style="background-color: #9dd1ef">
+                      <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>The leisure rider </ins></h6>
                         <p>
                           <em
@@ -317,7 +317,7 @@
                         </ul>
                         <!-- </p> -->
                       </div>
-                      <div class="p-5" style="background-color: #9dd1ef">
+                      <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>Environmentally conscious</ins></h6>
                         <p>
                           <em>"It's an easy and sustainable pick."</em>
@@ -389,37 +389,45 @@
                     <br />
                     <img
                       class="w-100 rounded mb-8 mx-auto d-block"
+                      style="padding-bottom: 50px"
                       loading="lazy"
                       src="assets/images/projects/SL_previousPrototype.svg"
                     />
-                    <div class="flexrow" style="align-items: center">
-                      <p>
-                        We also changed SL's main colour to a more muted colour
-                        that is easier to look at.
-                      </p>
-                      <div class="col-lg-6" style="padding: 20px">
-                        <img
-                          class="w-100 rounded p-2"
-                          loading="lazy"
-                          src="assets/images/projects/SlTransition.svg"
-                          alt="Original SL icon vs our version, with more muted colours."
-                        />
-                      </div>
+
+                    <p>
+                      We also changed SL's main colour to a more muted colour
+                      that is easier to look at.
+                    </p>
+                    <div class="col-lg-6" style="padding: 20px; margin: auto">
+                      <img
+                        class="w-100 rounded p-2"
+                        loading="lazy"
+                        src="assets/images/projects/SlTransition.svg"
+                        alt="Original SL icon vs our version, with more muted colours."
+                      />
                     </div>
 
-                    <br />
-                    <h5><strong>Difficulties</strong></h5>
+                    <h5><strong>Reworked prototype</strong></h5>
                     <p>
-                      More often than not, startups need to develop quickly.
-                      Since Bantaba needed the landing page to be released asap,
-                      our front end dev started coding it immediately as
-                      designed. Hence, I couldn’t go back and change anything,
-                      and I had to be really quick with my designs. <br /><br />
+                      This was my first project in Figma, so in early 2022 I
+                      decided to redo the prototype and make the UI more modern.
+                      I didn't change much other than the appearance, except for
+                      the categories in the "Rewards" (belöning) page.
+                    </p>
 
-                      I hope time won’t be such an issue again to the point
-                      where I need to design as the developer is simultaneously
-                      coding my design. Iterating becomes very difficult that
-                      way.
+                    <br />
+                    <h5><strong>User tests</strong></h5>
+                    <p>
+                      The satisfaction when the prototype is complete...!<br />
+                      Before we were completely done though, we decided to user
+                      test. Due to the pandemic, this was done remotely. Among
+                      other things, we asked them to show how to perform certain
+                      actions, and to tell us what they expected from each view
+                      (eg what would happen if you pressed a button). The goal
+                      was then to find out how they experienced the app and if
+                      the new functions are satisfactory. The testers gave us
+                      valuable feedback and helped us know what went well and
+                      what should be further improved.
                     </p>
                     <br />
 
@@ -430,10 +438,17 @@
                     />
                     <br />
 
-                    <h5><strong>... and the result?</strong></h5>
+                    <h5><strong>Conclusion</strong></h5>
                     <p>
-                      Check it out live at
-                      <a href="ourbantaba.com">Bantaba's website!</a><br />
+                      Among other things, this project has taught me how
+                      important it is to work agile, how wonderful Figma is, and
+                      how magical it is to see the puzzle pieces fall into place
+                      as you get closer to the end of the project. Not because
+                      the job is hard, but because it is so rewarding to be able
+                      to test the fully functional and interactive prototype.
+                      The user tests helped me train my interviewing skills and
+                      taught me how valuable it is to test people with different
+                      disabilites and of different age.
                     </p>
 
                     <img
