adding context to sl

--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -243,6 +243,28 @@
                       kind of people had.
                     </p>
 
+                    <h5><strong>THE PROCESS</strong></h5>
+                    <p></p>
+                    <ol style="columns: 2; -webkit-columns: 2; -moz-columns: 2">
+                      <li>Desktop research</li>
+                      <li>UX Review</li>
+                      <li>Survey</li>
+                      <li>Affinity Diagram</li>
+                      <li>User Types</li>
+                      <li>Sketches</li>
+                      <li>Site Map</li>
+                      <li>Flow Chart</li>
+                      <li>Wireframes</li>
+                      <li>Interactive prototype</li>
+                      <li>User Tests</li>
+                      <li>Improved prototype</li>
+                    </ol>
+
+                    <img
+                      loading="lazy"
+                      src="assets/images/projects/FlowSL.svg"
+                      alt="Two flows, the main log in and out, and subflow for rewards."
+                    />
                     <h5><strong>THREE TYPES OF USERS</strong></h5>
                     <div class="flexrow">
                       <div class="p-5" style="background-color: #c9e6f6">
