--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -260,11 +260,6 @@
                       <li>Improved prototype</li>
                     </ol>
 
-                    <img
-                      loading="lazy"
-                      src="assets/images/projects/FlowSL.svg"
-                      alt="Two flows, the main log in and out, and subflow for rewards."
-                    />
                     <h5><strong>THREE TYPES OF USERS</strong></h5>
                     <div class="flexrow">
                       <div class="p-5" style="background-color: #c9e6f6">
@@ -275,7 +270,6 @@
                             possible"</em
                           >
                         </p>
-                        <!-- <p> -->
                         <strong>Characteristics:</strong>
 
                         <ul>
@@ -302,7 +296,6 @@
                             choose SL over taxis, even on weekends.
                           </li>
                         </ul>
-                        <!-- </p> -->
                       </div>
                       <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>The leisure rider </ins></h6>
@@ -312,7 +305,6 @@
                             an uber home."</em
                           >
                         </p>
-                        <!-- <p> -->
                         <strong>Characteristics:</strong>
 
                         <ul>
@@ -337,14 +329,12 @@
                           </li>
                           <li>Public transport to events</li>
                         </ul>
-                        <!-- </p> -->
                       </div>
                       <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>Environmentally conscious</ins></h6>
                         <p>
                           <em>"It's an easy and sustainable pick."</em>
                         </p>
-                        <!-- <p> -->
                         <strong>Characteristics:</strong>
 
                         <ul>
@@ -363,7 +353,6 @@
                         <ul>
                           <li>Get them to care about the new point system.</li>
                         </ul>
-                        <!-- </p> -->
                       </div>
                     </div>
 
@@ -398,7 +387,11 @@
                       in an environmentally friendly and sustainable way, and at
                       the same time collect points which give you rewards.
                     </p>
-
+                    <img
+                      loading="lazy"
+                      src="assets/images/projects/FlowSL.svg"
+                      alt="Two flows, the main log in and out, and subflow for rewards."
+                    />
                     <br />
                     <h5><strong>First prototype</strong></h5>
                     <p>
@@ -408,12 +401,14 @@
                       the buttons on some pages were slightly transparent,
                       something that worsened the readability.
                     </p>
+
                     <br />
                     <img
                       class="w-100 rounded mb-8 mx-auto d-block"
                       style="padding-bottom: 50px"
                       loading="lazy"
                       src="assets/images/projects/SL_previousPrototype.svg"
+                      alt="Three screens from the first prototype."
                     />
 
                     <p>
@@ -436,8 +431,11 @@
                       I didn't change much other than the appearance, except for
                       the categories in the "Rewards" (belöning) page.
                     </p>
-
-                    <br />
+                    <img
+                      class="rounded m-5 mb-6 mx-auto d-block"
+                      loading="lazy"
+                      src="assets/images/projects/SL_mockup.svg"
+                    />
                     <h5><strong>User tests</strong></h5>
                     <p>
                       The satisfaction when the prototype is complete...!<br />
@@ -451,13 +449,6 @@
                       valuable feedback and helped us know what went well and
                       what should be further improved.
                     </p>
-                    <br />
-
-                    <img
-                      class="w-50 rounded mb-8 mx-auto d-block"
-                      loading="lazy"
-                      src="assets/images/projects/LandingPageFAQBlog.svg"
-                    />
                     <br />
 
                     <h5><strong>Conclusion</strong></h5>
