--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -202,7 +202,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <!-- project-image -->
-                <div class="col-lg-10">
+                <div class="col-lg-8">
                   <img
                     class="w-100 rounded"
                     loading="lazy"
@@ -218,7 +218,7 @@
           <section class="bg-light-soft section project-content">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-md-10">
+                <div class="col-md-7">
                   <div class="content">
                     <p>
                       SL is the company that runs all land based public
@@ -228,7 +228,9 @@
                       transport.
                     </p>
 
-                    <h5><strong>TARGET GROUP</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>TARGET GROUP</strong>
+                    </h2>
                     <p>
                       Our target group was quite broad - simply anyone who uses
                       SL - and a challenge was therefore how to understand each
@@ -243,7 +245,9 @@
                       kind of people had.
                     </p>
 
-                    <h5><strong>THE PROCESS</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>THE PROCESS</strong>
+                    </h2>
                     <p></p>
                     <ol style="columns: 2; -webkit-columns: 2; -moz-columns: 2">
                       <li>Desktop research</li>
@@ -260,7 +264,9 @@
                       <li>Improved prototype</li>
                     </ol>
 
-                    <h5><strong>THREE TYPES OF USERS</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>THREE TYPES OF USERS</strong>
+                    </h2>
                     <div class="flexrow">
                       <div class="p-5" style="background-color: #c9e6f6">
                         <h6><ins>The everyday commuter</ins></h6>
@@ -357,7 +363,9 @@
                     </div>
 
                     <br />
-                    <h5><strong>FINDING THE SOLUTION</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>FINDING THE SOLUTION</strong>
+                    </h2>
 
                     <div class="flexrow" style="align-items: center">
                       <p>
@@ -375,7 +383,9 @@
                         />
                       </div>
                     </div>
-                    <h5><strong>THE SOLUTION</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>THE SOLUTION</strong>
+                    </h2>
                     <p>
                       Our hypothesis is that with the help of our new function
                       "My SL" we will make people become more aware of their
@@ -393,7 +403,9 @@
                       alt="Two flows, the main log in and out, and subflow for rewards."
                     />
                     <br />
-                    <h5><strong>First prototype</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>First prototype</strong>
+                    </h2>
                     <p>
                       It was the first time we used Figma (besides some testing)
                       and we were all a little insecure but very willing to do
@@ -405,7 +417,7 @@
                     <br />
                     <img
                       class="w-100 rounded mb-8 mx-auto d-block"
-                      style="padding-bottom: 50px"
+                      style="padding-bottom: 50px; max-width: 600px"
                       loading="lazy"
                       src="assets/images/projects/SL_previousPrototype.svg"
                       alt="Three screens from the first prototype."
@@ -424,7 +436,9 @@
                       />
                     </div>
 
-                    <h5><strong>Reworked prototype</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>Reworked prototype</strong>
+                    </h2>
                     <p>
                       This was my first project in Figma, so in early 2022 I
                       decided to redo the prototype and make the UI more modern.
@@ -432,11 +446,14 @@
                       the categories in the "Rewards" (belöning) page.
                     </p>
                     <img
-                      class="rounded m-5 mb-6 mx-auto d-block"
+                      class="rounded m-5 mb-6 mx-auto d-block w-100"
+                      style="max-width: 600px"
                       loading="lazy"
                       src="assets/images/projects/SL_mockup.svg"
                     />
-                    <h5><strong>User tests</strong></h5>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>User tests</strong>
+                    </h2>
                     <p>
                       The satisfaction when the prototype is complete...!<br />
                       Before we were completely done though, we decided to user
@@ -451,8 +468,10 @@
                     </p>
                     <br />
 
-                    <h5><strong>Conclusion</strong></h5>
-                    <p>
+                    <h2 style="font-size: 1.25rem">
+                      <strong>Conclusion</strong>
+                    </h2>
+                    <p class="mb-6">
                       Among other things, this project has taught me how
                       important it is to work agile, how wonderful Figma is, and
                       how magical it is to see the puzzle pieces fall into place
@@ -464,12 +483,14 @@
                       disabilites and of different age.
                     </p>
 
-                    <img
-                      class="w-100 rounded mb-8"
-                      loading="lazy"
-                      src="assets/images/projects/LandingPagePhones.svg"
-                    />
-
+                    <div class="row justify-content-center">
+                      <img
+                        class="w-75 rounded m-6"
+                        style="max-width: 600px"
+                        loading="lazy"
+                        src="assets/images/projects/SL_mockup_hand.png"
+                      />
+                    </div>
                     <!-- <center><img class=" src="assets/images/projects/landingPage_phoneMockup.png" alt="Landing page."></center> -->
                   </div>
                 </div>
@@ -617,7 +638,7 @@
           <section class="section bg-light-soft">
             <div class="container">
               <div class="row">
-                <div class="col-lg-10 mx-auto text-center">
+                <div class="col-lg-8 mx-auto text-center">
                   <p class="small text-uppercase mb-4">Do you like my work?</p>
                   <div class="section-title text-center">
                     <h2 class="title">
