--- a/portfolio/SL.html
+++ b/portfolio/SL.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="list-inline-item mt-4 me-6">
                       <p class="small text-uppercase">Date</p>
-                      <p class="text-black">5 nov - 5 dec 2020</p>
+                      <p class="text-black">5 nov 5 dec 2020</p>
                     </div>
                   </ul>
                 </div>
@@ -239,10 +239,9 @@
                     <p>
                       We solved this by creating three types of user behavior to
                       focus on. We came up with these three by making and
-                      releasing a survey, from which we took answers that we
-                      used to make an affinity diagram. With the affinity
-                      diagram, we could easily picture what kind of needs what
-                      kind of people had.
+                      releasing a survey, and use the results to make an
+                      affinity diagram. With the affinity diagram, we could
+                      easily picture what kind of needs what kind of people had.
                     </p>
 
                     <h2 style="font-size: 1.25rem">
